# better_fastlio2

ros_free/: CMakeLists.txt  README.md
ros_free/include/core/: odometry_pipeline.hpp  types.hpp
ros_free/include/io/: interfaces.hpp
ros_free/scripts/: generate_project.sh
ros_free/src/: main.cpp  odometry_pipeline.cpp
